# drover

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  LICENSE  README.md  azure-pipelines.yml  drover.code-workspace  mypy.ini  noxfile.py  pytest.ini  requirements.build.in  requirements.build.txt  requirements.dev.in  requirements.dev.txt  requirements.txt  setup.py  tasks.py
.circleci/: config.yml
docs/: conf.py  drover.rst  examples.rst  index.rst  modules.rst
drover/: __init__.py  _copy_patch.py  cli.py  deployment.py  io.py  models.py  packaging.py
drover/aws/: models.py
examples/: README.md
examples/basic_lambda/: README.md  drover.yml  pyproject.toml  setup.cfg  setup.py  tasks.py
examples/basic_lambda/basic_lambda/: __init__.py
examples/xkcd_api/: .gitignore  .isort.cfg  README.md  drover.yml  noxfile.py  requirements.build.in  requirements.build.txt  requirements.dev.in  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  xkcd-api.code-workspace
examples/xkcd_api/instance/: logging.local.yml  settings.yml
examples/xkcd_api/xkcd_api/: __init__.py  api.py  asgi.py  asgi_lambda.py  aws.py  models.py  routes.py  state.py
examples/xkcd_api/xkcd_api/templates/: comic.html.j2
tests/: test_cli.py  test_drover.py  test_io.py  test_models.py
