[metadata]
name = basic-lambda
version = attr: basic_lambda.VERSION
author = Jeffrey Wilges
author_email = jeffrey@wilges.com
description = a basic Lambda that returns its version
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwilges/drover
license = BSD
platform = any
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking

[options]
packages = find:
python_requires = >= 3.8
setup_requires =
    wheel

[options.packages.find]
where=basic_lambda
