[metadata]
name = xkcd-api
version = 0.1
author = Jeffrey Wilges
author_email = jeffrey@wilges.com
description = A demonstration REST API that proxies requests to the XKCD API (https://xkcd.com)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwilges/drover
platform = any
classifiers = 
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: ASGI :: Application
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking

[options]
setup_requires =
    wheel
python_requires = >=3.8
include_package_data = True
packages = find:
test_suite = tests
install_requires =
    fastapi>=0.52
    httpx>=0.16
    jinja2>=2.11
    pydantic>=1.4
    pyyaml>=5.3

[options.packages.find]
exclude =
    tests

[options.package_data]
xkcd_api =
    templates/*